--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name="com.dan.kaftan.onlineshop.onlineshop.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-        <activity android:name="com.dan.kaftan.onlineshop.onlineshop.get_image" />
+        <activity android:name="com.dan.kaftan.onlineshop.onlineshop.DownloadCatalog" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
+
         <activity android:name="com.dan.kaftan.onlineshop.onlineshop.ListView" />
 
         <service android:name="com.dan.kaftan.onlineshop.onlineshop.FcmToken">
