--- a/shopconsole/build.gradle
+++ b/shopconsole/build.gradle
@@ -2,6 +2,11 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
+    lintOptions {
+
+        checkReleaseBuilds false
+
+    }
 
 
 
